--- a/template/example.html
+++ b/template/example.html
@@ -9,7 +9,7 @@
  <script src="https://use.typekit.net/nvq3nyg.js"></script>
  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-  <link href="style/notmuch.css" rel="stylesheet" />
+  <link href="../style/notmuch.css" rel="stylesheet" />
 
 </head>
 
