--- a/template/example.html
+++ b/template/example.html
@@ -20,8 +20,8 @@
 
 Bloom Howth Head metempsychosis Circe Martha ineluctable modality of the visible portals of discovery ben Bloom Elijah navel. Cyclops like a shot off a shovel plump mellow seedcake metempsychosis Sinbad the Sailor omphalos contransmagnificandjewbangtantiality he proves by algebra soft la ci darem la mano faintly scented urine Molly. Letter ben Bloom Elijah Frseeeeeeeeeeeeeeeeeeeefrong seedcake Tinbad the Tailor love laughs at locksmiths Sandycove Stephen. Yellow Rudy Bloom Agenbite of Inwit metempsychosis Sandycove Sandymount strand mellow Gerty MacDowell faintly scented urine soft melons transmigration. Fortyfoot Tinbad the Tailor Buck Mulligan soft like a shot off a shovel yellow Sandymount strand yes I said yes I will Yes.
 
-</xmp>
-<!-- end markdown content section -->
+</xmp> <!-- end markdown content section -->
+
 <script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
