--- a/style/notmuch.css
+++ b/style/notmuch.css
@@ -12,14 +12,17 @@ h1 {
     line-height: 1.2;
     font-weight: normal;
     font: 100% "league-gothic", sans-serif;
-    font-size: 2em
+    font-size: 1.75em;
+    color: #444;
 }
 
 h2, h3 {
         line-height: 1.2;
         font-weight: normal;
         font: 100% "league-gothic", sans-serif;
-        font-size: 1.8em;}
+        font-size: 1.2em;
+        color: #444;
+}
 
 code {
     background: #ededed;
