--- a/template/example.html
+++ b/template/example.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width" initial-scale=1>
-  <title>TY-M dev adventures</title>
+  <title>The Straplessdown Example!</title>
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cardo" />
  <script src="https://use.typekit.net/nvq3nyg.js"></script>
