--- a/style/notmuch.css
+++ b/style/notmuch.css
@@ -29,3 +29,9 @@ code {
     border: 0.5px solid #3c3c3c;
     border-radius: 3px;
 }
+
+a:link, a:visited {color: #aaa;
+        text-decoration: none;
+        border-bottom: 0.5px solid #acacac;
+       }
+a:hover {color: #fff;}
