--- a/theme/main.css
+++ b/theme/main.css
@@ -31,31 +31,26 @@ code {
     border: 1px solid #4a4a4a;
     border-radius: 3px;
 }
-
-
 .highlight pre, .linenodiv pre {
     line-height: 1.33em;
     padding: 7px 12px;
     border: 1px solid #3c3c3c;
     border-radius: 5px;
 }
-
 .linenodiv {
     opacity: 0.5;
 }
-
 a:link, a:visited {
     color: #c4c4c4;
     text-decoration: none;
     border-bottom: 0.5px dotted #acacac;
 }
-
 a:hover {
     color: #fff;
 }
-
-h1 a, h2 a { border-bottom: none !important;}
-
+h1 a, h2 a {
+    border-bottom: none !important;
+}
 blockquote {
     font-family: "Cardo", serif;
     font-size: 1em;
@@ -72,7 +67,6 @@ blockquote {
     box-sizing: padding-box;
     margin: 0 auto;
 }
-
 a.svg {
     position: relative;
     display: inline-block;
@@ -110,13 +104,11 @@ a:hover {
         width: 1170px
     }
 }
-
 .topmenu {
     float: right;
     padding: 0;
     margin: 0;
 }
-
 #banner .copy {
     display: block;
     float: left;
@@ -126,7 +118,6 @@ a:hover {
     margin-bottom: 1em;
     /*min-width: 100%;*/
 }
-
 #banner h1 {
     color: #fff;
     font-size: 2em;
@@ -140,9 +131,9 @@ a:hover {
     line-height: 1.33;
     /*opacity: 0.75;*/
 }
-
-#main {clear: both;}
-
+#main {
+    clear: both;
+}
 .small {
     font-family: "Lato", sans-serif;
     font-size: 0.75em;
@@ -171,13 +162,11 @@ hr {
     font-family: "Lato", sans-serif;
     font-size: 0.8em;
 }
-
 a.icon {
     position: relative;
     display: inline-block;
     border: none !important;
 }
-
 .entry-content img {
     max-width: 100%;
     height: auto;
