--- a/output/theme/solarizeddark.css
+++ b/output/theme/solarizeddark.css
@@ -68,3 +68,75 @@
 .highlight pre .vg { color: #268bd2 } /* Name.Variable.Global */
 .highlight pre .vi { color: #268bd2 } /* Name.Variable.Instance */
 .highlight pre .il { color: #2aa198 } /* Literal.Number.Integer.Long */
+
+
+.gist-syntax pre .hll { background-color: #ffffcc }
+.gist-syntax pre, .gist-syntaxtable pre { background: #002b36; color: #839496 }
+.gist-syntax pre .c { color: #586e75; font-style: italic } /* Comment */
+.gist-syntax pre .err { color: #dc322f } /* Error */
+.gist-syntax pre .g { color: #839496 } /* Generic */
+.gist-syntax pre .k { color: #859900 } /* Keyword */
+.gist-syntax pre .l { color: #839496 } /* Literal */
+.gist-syntax pre .n { color: #93a1a1 } /* Name */
+.gist-syntax pre .o { color: #839496 } /* Operator */
+.gist-syntax pre .x { color: #839496 } /* Other */
+.gist-syntax pre .p { color: #839496 } /* Punctuation */
+.gist-syntax pre .cm { color: #586e75; font-style: italic } /* Comment.Multiline */
+.gist-syntax pre .cp { color: #586e75; font-style: italic } /* Comment.Preproc */
+.gist-syntax pre .c1 { color: #586e75; font-style: italic } /* Comment.Single */
+.gist-syntax pre .cs { color: #586e75; font-style: italic } /* Comment.Special */
+.gist-syntax pre .gd { color: #839496 } /* Generic.Deleted */
+.gist-syntax pre .ge { color: #839496 } /* Generic.Emph */
+.gist-syntax pre .gr { color: #839496 } /* Generic.Error */
+.gist-syntax pre .gh { color: #839496 } /* Generic.Heading */
+.gist-syntax pre .gi { color: #839496 } /* Generic.Inserted */
+.gist-syntax pre .go { color: #839496 } /* Generic.Output */
+.gist-syntax pre .gp { color: #839496 } /* Generic.Prompt */
+.gist-syntax pre .gs { color: #839496 } /* Generic.Strong */
+.gist-syntax pre .gu { color: #839496 } /* Generic.Subheading */
+.gist-syntax pre .gt { color: #839496 } /* Generic.Traceback */
+.gist-syntax pre .kc { color: #859900 } /* Keyword.Constant */
+.gist-syntax pre .kd { color: #859900 } /* Keyword.Declaration */
+.gist-syntax pre .kn { color: #cb4b16 } /* Keyword.Namespace */
+.gist-syntax pre .kp { color: #cb4b16 } /* Keyword.Pseudo */
+.gist-syntax pre .kr { color: #859900 } /* Keyword.Reserved */
+.gist-syntax pre .kt { color: #859900 } /* Keyword.Type */
+.gist-syntax pre .ld { color: #839496 } /* Literal.Date */
+.gist-syntax pre .m { color: #2aa198 } /* Literal.Number */
+.gist-syntax pre .s { color: #2aa198 } /* Literal.String */
+.gist-syntax pre .na { color: #839496 } /* Name.Attribute */
+.gist-syntax pre .nb { color: #268bd2 } /* Name.Builtin */
+.gist-syntax pre .nc { color: #268bd2 } /* Name.Class */
+.gist-syntax pre .no { color: #b58900 } /* Name.Constant */
+.gist-syntax pre .nd { color: #cb4b16 } /* Name.Decorator */
+.gist-syntax pre .ni { color: #cb4b16 } /* Name.Entity */
+.gist-syntax pre .ne { color: #cb4b16 } /* Name.Exception */
+.gist-syntax pre .nf { color: #268bd2 } /* Name.Function */
+.gist-syntax pre .nl { color: #839496 } /* Name.Label */
+.gist-syntax pre .nn { color: #b58900 } /* Name.Namespace */
+.gist-syntax pre .nx { color: #839496 } /* Name.Other */
+.gist-syntax pre .py { color: #268bd2 } /* Name.Property */
+.gist-syntax pre .nt { color: #859900 } /* Name.Tag */
+.gist-syntax pre .nv { color: #cb4b16 } /* Name.Variable */
+.gist-syntax pre .ow { color: #859900 } /* Operator.Word */
+.gist-syntax pre .w { color: #002b36 } /* Text.Whitespace */
+.gist-syntax pre .mf { color: #2aa198 } /* Literal.Number.Float */
+.gist-syntax pre .mh { color: #2aa198 } /* Literal.Number.Hex */
+.gist-syntax pre .mi { color: #2aa198 } /* Literal.Number.Integer */
+.gist-syntax pre .mo { color: #2aa198 } /* Literal.Number.Oct */
+.gist-syntax pre .sb { color: #2aa198 } /* Literal.String.Backtick */
+.gist-syntax pre .sc { color: #2aa198 } /* Literal.String.Char */
+.gist-syntax pre .sd { color: #2aa198 } /* Literal.String.Doc */
+.gist-syntax pre .s2 { color: #2aa198 } /* Literal.String.Double */
+.gist-syntax pre .se { color: #cb4b16 } /* Literal.String.Escape */
+.gist-syntax pre .sh { color: #2aa198 } /* Literal.String.Heredoc */
+.gist-syntax pre .si { color: #cb4b16 } /* Literal.String.Interpol */
+.gist-syntax pre .sx { color: #2aa198 } /* Literal.String.Other */
+.gist-syntax pre .sr { color: #2aa198 } /* Literal.String.Regex */
+.gist-syntax pre .s1 { color: #2aa198 } /* Literal.String.Single */
+.gist-syntax pre .ss { color: #2aa198 } /* Literal.String.Symbol */
+.gist-syntax pre .bp { color: #268bd2; font-weight: bold } /* Name.Builtin.Pseudo */
+.gist-syntax pre .vc { color: #268bd2 } /* Name.Variable.Class */
+.gist-syntax pre .vg { color: #268bd2 } /* Name.Variable.Global */
+.gist-syntax pre .vi { color: #268bd2 } /* Name.Variable.Instance */
+.gist-syntax pre .il { color: #2aa198 } /* Literal.Number.Integer.Long */
