--- a/theme/main.css
+++ b/theme/main.css
@@ -1,153 +1,118 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,300|Cardo:400,700|Lato:400);
 body {
-    margin: 0 auto;
-    padding: 1em;
-    max-width: 32em;
     background: #232323;
     color: #909090;
-    font: 100% 'Cardo', serif;
+    font: 100% 'Gentium Basic', serif;
     font-size: 1.2em;
     line-height: 1.7em;
+    margin: 0 auto;
+    max-width: 61.8%;
+    padding: 1em;
 }
+@media all and (max-width:768px) {
+    .main {
+        max-width: 100%;
+        padding: 1rem;
+    }
+}
+
 h1 {
-    line-height: 1.2;
+    border: none;
+    font: 100% 'Playfair Display', sans-serif;
+    font-size: 1.8em ;
     font-weight: normal;
-    font: 100% 'Oswald', sans-serif;
-    font-weight: 400;
-    font-size: 1.5em border: none !important;
+    line-height: 1;
+
 }
-h2, h3 {
-    line-height: 1.2;
-    font-weight: 400;
-    font: 100% 'Oswald', sans-serif;
-    font-size: 1.25em;
-    border: none !important;
+h2 {
+    border: none;
+    font: 100% 'Playfair Display', sans-serif;
+    font-size: 1.5em;
+    font-weight: normal;
+    line-height: 1.5;
+    margin-top: 2.7em;
 }
+
+h3 {
+    border: none;
+    font: 100% 'Playfair Display', sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+    line-height: 1.5;
+}
+
+h4 {
+    font-weight: bolder;
+}
+
 code {
     background-color: rgba(0, 43, 54, 0.25);
+    border: 1px solid #4a4a4a;
+    border-radius: 3px;
     color: #a3a3a3;
     font-size: 0.9em;
     padding: 2px 4px;
-    border: 1px solid #4a4a4a;
-    border-radius: 3px;
 }
 .highlight pre, .linenodiv pre {
-    line-height: 1.33em;
-    padding: 7px 12px;
     border: 1px solid #3c3c3c;
     border-radius: 5px;
+    line-height: 1.33em;
+    padding: 7px 12px;
 }
 .linenodiv {
     opacity: 0.5;
 }
 a:link, a:visited {
+    border-bottom: 0.5px dotted #acacac;
     color: #c4c4c4;
     text-decoration: none;
-    border-bottom: 0.5px dotted #acacac;
 }
 a:hover {
     color: #fff;
 }
-h1 a, h2 a {
-    border-bottom: none !important;
+h1 a:link, h2 a:link, h3 a:link, h1 a:visited, h2 a:visited {
+    border: none;
 }
 blockquote {
-    font-family: "Cardo", serif;
-    font-size: 1em;
-    line-height: 1.5em;
-    font-style: italic !important;
     color: #bbb;
-}
-.navbar-brand, .navbar-right {
-    font-family: "Oswald", sans-serif;
-}
-.container {
-    clear: both;
-    max-width: 36em;
-    box-sizing: padding-box;
-    margin: 0 auto;
+    font-family: "Gentium Basic", serif;
+    font-size: 1em;
+    font-style: italic !important;
+    line-height: 1.5em;
 }
 a.svg {
-    position: relative;
-    display: inline-block;
     border: none !important;
+    display: inline-block;
+    position: relative;
 }
 a.svg:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
     bottom: 0;
+    content: "";
     left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 a:hover {
     border: none;
 }
-.container {
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px
-}
-@media (min-width:768px) {
-    .container {
-        width: 750px
-    }
-}
-@media (min-width:992px) {
-    .container {
-        width: 970px
-    }
-}
-@media (min-width:1200px) {
-    .container {
-        width: 1170px
-    }
-}
 .topmenu {
     float: right;
-    padding: 0;
     margin: 0;
-}
-#banner .copy {
-    display: block;
-    float: left;
-    /*padding-bottom: 1em;*/
-    border-bottom: 3px solid #777;
-    margin-left: -16px;
-    margin-bottom: 1em;
-    /*min-width: 100%;*/
-}
-#banner h1 {
-    color: #fff;
-    font-size: 2em;
-    font-weight: 700;
-    line-height: 0.9;
-    margin: 0;
-}
-#banner .intro {
-    color: #fff;
-    font-size: 1.2em;
-    margin-bottom: 0;
     padding: 0;
-}
-#main {
-    clear: both;
 }
 .small {
     font-family: "Lato", sans-serif;
     font-size: 0.75em;
 }
 .foot-foot {
-    margin-top: 2.5em;
-    margin-bottom: 4em;
-    line-height: 1.55em;
-    border-left: #a2a2a2 3px solid;
     display: block;
+    line-height: 1.55em;
+    margin-bottom: 4em;
+    margin-top: 2.5em;
 }
 .foot-foot a, .foot-foot a:visited {
-    color: #6a6b95;
     border-bottom: 1px dotted #666;
+    color: #6a6b95;
 }
 .foot-foot a:hover {
     border: none !important;
@@ -163,11 +128,11 @@ hr {
     font-size: 0.8em;
 }
 a.icon {
-    position: relative;
-    display: inline-block;
     border: none !important;
+    display: inline-block;
+    position: relative;
 }
 .entry-content img {
-    max-width: 100%;
     height: auto;
+    max-width: 100%;
 }
