Generate Pelican site

--- a/theme/main.css
+++ b/theme/main.css
@@ -48,21 +48,14 @@ h3 {
 h4 {
     font-weight: bolder;
 }
-
-code {
-    background-color: rgba(0, 43, 54, 0.25);
-    border: 1px solid #4a4a4a;
-    border-radius: 3px;
-    color: #a3a3a3;
-    font-size: 0.9em;
-    padding: 2px 4px;
+.code {
+    max-width: 100%;
+    overflow: scroll;
 }
 .highlight pre, .linenodiv pre {
     border: 1px solid #3c3c3c;
     border-radius: 5px;
     line-height: 1.33em;
-    max-width: 100%;
-    overflow: scroll;
     padding: 7px 12px;
 }
 .linenodiv {
@@ -151,7 +144,7 @@ hr {
     font-family: "Lato", sans-serif;
     font-size: 0.8em;
 }
-a.icon {
+.icon a:link, .icon a:visited {
     border: none;
     display: inline-block;
     position: relative;
